force-app/main/default/objects/Note_de_frais__c/Note_de_frais__c.object-meta.xml
<CustomObject>
    <label>Note de frais</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Note de frais Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notes de frais</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>