force-app/main/default/objects/Note_de_frais__c/fields/Activit__c.field-meta.xml
<CustomField>
    <fullName>Activit__c</fullName>
    <label>Activité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activité interne/Inter Contrat/Divers</fullName>
            </value>
            <value>
                <fullName>Prestations</fullName>
            </value>
            <value>
                <fullName>Projet interne</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>