force-app/main/default/objects/Note_de_frais__c/fields/Aller_Retour__c.field-meta.xml
<CustomField>
    <fullName>Aller_Retour__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aller/Retour</label>
    <type>Checkbox</type>
</CustomField>