force-app/main/default/objects/Note_de_frais__c/fields/Client_Activite__c.field-meta.xml
<CustomField>
    <fullName>Client_Activite__c</fullName>
    <label>Client/Activité</label>
    <length>50</length>
    <type>Text</type>
</CustomField>