force-app/main/default/objects/Note_de_frais__c/fields/Devise__c.field-meta.xml
<CustomField>
    <fullName>Devise__c</fullName>
    <label>Devise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Euro</fullName>
            </value>
            <value>
                <fullName>Dollar</fullName>
            </value>
            <value>
                <fullName>Dinar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>