force-app/main/default/objects/Note_de_frais__c/fields/Distance_en_KM__c.field-meta.xml
<CustomField>
    <fullName>Distance_en_KM__c</fullName>
    <label>Distance en KM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>