force-app/main/default/objects/Note_de_frais__c/fields/Mois__c.field-meta.xml
<CustomField>
    <fullName>Mois__c</fullName>
    <formula>CASE(MONTH(TODAY()),
1, &quot;Janvier&quot;,
2, &quot;Février&quot;,
3, &quot;Mars&quot;,
4, &quot;Avril&quot;,
5, &quot;Mai&quot;,
6, &quot;Juin&quot;,
7, &quot;Juillet&quot;,
8, &quot;Août&quot;,
9, &quot;Septembre&quot;,
10, &quot;Octobre&quot;,
11, &quot;Novembre&quot;,
12, &quot;Décembre&quot;,
&quot;Inconnu&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mois</label>
    <type>Text</type>
</CustomField>