force-app/main/default/objects/Note_de_frais__c/fields/Montant_TTC__c.field-meta.xml
<CustomField>
    <fullName>Montant_TTC__c</fullName>
    <label>Montant TTC (Euro)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>