force-app/main/default/objects/Note_de_frais__c/fields/Montant_TVA__c.field-meta.xml
<CustomField>
    <fullName>Montant_TVA__c</fullName>
    <label>Montant TVA (Euro)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>