force-app/main/default/objects/Note_de_frais__c/fields/Motif__c.field-meta.xml
<CustomField>
    <fullName>Motif__c</fullName>
    <label>Motif</label>
    <length>50</length>
    <type>Text</type>
</CustomField>