force-app/main/default/objects/Note_de_frais__c/fields/Moyen_de_paiement__c.field-meta.xml
<CustomField>
    <fullName>Moyen_de_paiement__c</fullName>
    <label>Moyen de paiement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Espèce</fullName>
            </value>
            <value>
                <fullName>Cheque personnel</fullName>
            </value>
            <value>
                <fullName>Carte bancaire personnel</fullName>
            </value>
            <value>
                <fullName>Carte bancaire entreprise</fullName>
            </value>
            <value>
                <fullName>Cheque entreprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>