force-app/main/default/objects/Note_de_frais__c/fields/Periodicite__c.field-meta.xml
<CustomField>
    <fullName>Periodicite__c</fullName>
    <label>Périodicité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Frais à une date précise</fullName>
            </value>
            <value>
                <fullName>Chaque jours ouvré du mois</fullName>
            </value>
            <value>
                <fullName>Chaque jour calendaire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>