force-app/main/default/objects/Note_de_frais__c/fields/Puissance_Fiscale__c.field-meta.xml
<CustomField>
    <fullName>Puissance_Fiscale__c</fullName>
    <label>Puissance Fiscale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 CV et moins</fullName>
            </value>
            <value>
                <fullName>4 CV</fullName>
            </value>
            <value>
                <fullName>5 CV</fullName>
            </value>
            <value>
                <fullName>6 CV</fullName>
            </value>
            <value>
                <fullName>7 CV et plus</fullName>
            </value>
            <value>
                <fullName>2 roues Moins de 50 CM3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>