force-app/main/default/objects/Note_de_frais__c/fields/TVA__c.field-meta.xml
<CustomField>
    <fullName>TVA__c</fullName>
    <label>TVA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FR Exonération de la TVA</fullName>
            </value>
            <value>
                <fullName>FR N/A</fullName>
            </value>
            <value>
                <fullName>FR TVA 5,5%</fullName>
            </value>
            <value>
                <fullName>FR TVA 7%</fullName>
            </value>
            <value>
                <fullName>FR TVA 10%</fullName>
            </value>
            <value>
                <fullName>FR TVA 20%</fullName>
            </value>
            <value>
                <fullName>TN Exonération de la TVA</fullName>
            </value>
            <value>
                <fullName>TN TVA 19%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>