force-app/main/default/objects/Note_de_frais__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Divers</fullName>
            </value>
            <value>
                <fullName>Frais kilométrique</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Parking</fullName>
            </value>
            <value>
                <fullName>Téléphone</fullName>
            </value>
            <value>
                <fullName>Train</fullName>
            </value>
            <value>
                <fullName>Avion</fullName>
            </value>
            <value>
                <fullName>Transport/Taxi</fullName>
            </value>
            <value>
                <fullName>Restaurant</fullName>
            </value>
            <value>
                <fullName>Péage</fullName>
            </value>
            <value>
                <fullName>Fourniture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>