force-app/main/default/objects/Note_de_frais__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Mois__c</columns>
    <columns>Annee__c</columns>
    <columns>Date__c</columns>
    <columns>Activit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>